[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pizza-eval"
version = "0.1.0"
description = "Custom string processing engine for PizzaRomani"
readme = "README.md"
authors = [
    {name = "HyperLexus", email = "hyperlexus1@proton.me"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/hyperlexus/pizza-eval"
"Bug Tracker" = "https://github.com/hyperlexus/pizza-eval/issues"

[tool.setuptools.packages.find]
where = ["src"]